# TimeManager

./: .gitignore  CMakeLists.txt  Makefile  README.md  format.c  function.c  group.c  group.h  groupmain.c  header.h  main.c  task.c  time.c  time.h  wrapper.c  wrapper.h
src/: main.c
